# fastapi_slides

./: .gitignore  README.md  index.html  package-lock.json  package.json  slides.md  slides_comparison.md
.github/workflows/: node.js.yml  python.yml
src/: .gitignore  Makefile  mypy.ini  pyproject.toml
src/example/: basic_example.py  example1.py  example2.py  main.py  simple_db.py
src/tests/: test_example.py  test_fuzzing.py  test_schema.py
