[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Wilfried Huss <wilfried.huss@aqt.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
hypothesis = "^6.21.4"
schemathesis = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
