[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Wilfried Huss <wilfried.huss@aqt.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
fastapi = "^0.68.1"
gunicorn = "^20.1.0"
requests = "^2.26.0"
unicorn = "^1.0.3"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
hypothesis = "^6.21.4"
mypy = "^0.910"
pytest = "^5.2"
schemathesis = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
